--- a/src/oraclient/view/FileJDialog.form
+++ b/src/oraclient/view/FileJDialog.form
@@ -44,10 +44,7 @@
                                       <Component id="fileLocation" min="-2" pref="227" max="-2" attributes="0"/>
                                       <EmptySpace min="0" pref="1" max="32767" attributes="0"/>
                                   </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                                      <Component id="okButton" min="-2" pref="72" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="okButton" alignment="1" min="-2" pref="72" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
@@ -117,7 +114,7 @@
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="System.getProperty(&quot;java.io.tmpdir&quot;)" type="code"/>
+          <Connection code="System.getProperty(&quot;user.home&quot;)" type="code"/>
         </Property>
       </Properties>
     </Component>
