--- a/src/oraclient/view/OpenFileJDialog.form
+++ b/src/oraclient/view/OpenFileJDialog.form
@@ -29,13 +29,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="filePath" pref="224" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="151" max="32767" attributes="0"/>
                       <Component id="createFile" min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="filePath" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="cancel" max="32767" attributes="0"/>
                   <Component id="browseFs" pref="72" max="32767" attributes="0"/>
