--- a/src/oraclient/view/OpenFileJDialog.form
+++ b/src/oraclient/view/OpenFileJDialog.form
@@ -31,14 +31,14 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="0" pref="151" max="32767" attributes="0"/>
-                      <Component id="createFile" min="-2" pref="79" max="-2" attributes="0"/>
+                      <Component id="openFileBtn" min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="filePath" max="32767" attributes="0"/>
+                  <Component id="filePathTxtField" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="cancel" max="32767" attributes="0"/>
-                  <Component id="browseFs" pref="72" max="32767" attributes="0"/>
+                  <Component id="cancelBtn" max="32767" attributes="0"/>
+                  <Component id="browseFSBtn" pref="72" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -49,13 +49,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="filePath" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="browseFs" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="filePathTxtField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="browseFSBtn" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="cancel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="createFile" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cancelBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="openFileBtn" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -63,30 +63,30 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="createFile">
+    <Component class="javax.swing.JButton" name="openFileBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x44c;"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="createFileActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="openFileBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="cancel">
+    <Component class="javax.swing.JButton" name="cancelBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43c;&#x435;&#x43d;&#x430;"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="filePath">
+    <Component class="javax.swing.JTextField" name="filePathTxtField">
     </Component>
-    <Component class="javax.swing.JButton" name="browseFs">
+    <Component class="javax.swing.JButton" name="browseFSBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x41e;&#x431;&#x437;&#x43e;&#x440;..."/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="browseFsActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="browseFSBtnActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
